<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/monthly_view"
        android:title="Monthly"
        />
    <item
        android:id="@+id/weekly_view"
        android:title="Weekly"
        />
    <item
        android:id="@+id/daily_view"
        android:title="Daily"
        />
    <item
        android:id="@+id/all_events"
        android:title="Events"
        />
    <item
        android:id="@+id/schedule_analyze"
        android:title="Analyze Schedule"
        />
</menu>