...
            android:translationX="320dp"
            android:translationY="70dp"
            app:srcCompat="@drawable/baseline_keyboard_arrow_right_24" />
    </com.example.myapplication.NavBarView>

    <TextView
        android:id="@+id/dayOfMonthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="dayofmonth"
        android:textSize="20dp"
        android:translationX="10dp"
...
