...
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="followers.FollowersPage">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="325dp"
        android:background="@null"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintEnd_toStartOf="@+id/filter_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
...
